edited execution to use multiple search terms from the config file

--- a/ipynb/OrganizedCraigs.ipynb
+++ b/ipynb/OrganizedCraigs.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7f254dc02fa926e21a4e78b3c98f23783192771f91c0ad8bfc79fb30a7ae7a33"
+  "signature": "sha256:e08d0f3513c0e639f86d877d89ed0bec7c992c3ab8c0a9cb7e9a33cfd921b7e3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,7 +44,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -215,6 +215,44 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "search={}\n",
+      "search['lab']=[]\n",
+      "search['lab'].append('warehouse&20philadelphia')\n",
+      "search['fbh']=[]\n",
+      "search['fbh'].append('dishwasher&20philadelphia')\n",
+      "search['fbh'].append('cook&20philadelphia')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "        print val"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "dishwasher&20philadelphia\n",
+        "cook&20philadelphia\n",
+        "warehouse&20philadelphia\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
